Fix landmark and spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,7 +124,7 @@ ul {
 }
 
 li {
-  padding-left: 1rem;
+  padding: 0.5rem 1rem;
 }
 
 li::marker {
@@ -153,6 +153,11 @@ li::marker {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+footer {
+  display: flex;
+  justify-content: center;
 }
 
 @media screen and (min-width: 1440px) {
